change photo size

--- a/brands/gravel.html
+++ b/brands/gravel.html
@@ -25,11 +25,11 @@
                 </div>
             </div>
         </header>
-        <div class="owl-carousel">
+        <!-- <div class="owl-carousel">
             <img src="../img/gravel/carousel/Detail_2.png" alt="">
             <img src="../img/gravel/carousel/Gesamt_1.png" alt="">
             <img src="../img/gravel/carousel/Gesamtl_3.png" alt="">
-        </div>
+        </div> -->
         <main class="main">
             <section class="block_one">
             <div class="container">
