--- a/brands/gravel.html
+++ b/brands/gravel.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="../vendor/bootstrap-4.6.2-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/owlcarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="../vendor/owlcarousel/owl.theme.default.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script type="text/javascript" src="../js/jquery-v3.6.1.mini.js"></script>
     <script type="text/javascript" src="../js/custom.js"></script>
     <script type="text/javascript" src="../vendor/bootstrap-4.6.2-dist/js/bootstrap.min.js"></script>
