add responsive main and brands

--- a/brands.html
+++ b/brands.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Бренди</title>
     <link rel="stylesheet" href="css/brands_style.css" />
-    <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="stylesheet" href="css/responsive_brands.css" />
     <link
       rel="stylesheet"
       type="text/css"
@@ -24,34 +24,34 @@
       <main class="main">
         <div class="container">
           <div class="row">
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
               <a href="brands/royal_crown.html"
                 ><img src="img/royal_crown/royal_crown.jpg" alt=""
               /></a>
             </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
               <a href="brands/gravel.html"
                 ><img src="img/gravel_logo.jpg" alt=""
               /></a>
             </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
               <a href="brands/welton_london.html"
                 ><img src="img/welton_london/welton_logo.png" alt=""
               /></a>
             </div>
             <div class="container">
             <div class="row">
-              <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+              <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                 <a href="brands/shauran.html"
                   ><img src="img/shauran/photo_2023-02-06 14.20.32.jpg" alt=""
                 /></a>
               </div>
-              <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+              <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                 <a href="brands/somens.html"
                   ><img src="img/somens/somens_logo.jpg" alt=""
                 /></a>
               </div>
-              <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+              <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                 <a href="brands/vertus.html"
                   ><img src="img/vertus/vertus.jpg" alt=""
                 /></a>
