--- a/brands/somens.html
+++ b/brands/somens.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../brands_css/somens.css" />
+    <link rel="stylesheet" href="../brands_css/shauran_responsive.css">
     <link
       rel="stylesheet"
       type="text/css"
@@ -45,8 +46,10 @@
                 <div class="discription">
                   <h4>SOMENS ARIA</h4>
                   <p>
-                    су, амбри та ванілі, щоб гіпнотизувати.
+                    Арія - це суть Середземного моря. Він представляє та пов’язує міграцію тих, хто з часом пішов на відважну пригоду до Америки. Він починається з найкращого лимона, бергамоту та граната з дерев, які вирощуються з покоління в покоління на сонячних землях Піренейського півострова навіть сьогодні.
+ноти серця: Білий Чай і Жасмин з Провансу та Інжир з Каталонії, де народився знаменитий художник Далі; Базові ноти — одні з найдавніших інгредієнтів Ліванських гір, ветивер і кедр, збалансовані нотами мускусу.
                   </p>
+                  <p>Парфумер: Chris Maurice.</p>
                   <p>Верхні ноти: Лимон, Бергамот та Гранат</p>
                   <p>Cередні ноти: Чай, Жасмін та Інжир​
                   </p>
@@ -71,8 +74,9 @@
                   <div class="discription">
                     <h4>SOMENS JADE</h4>
                     <p>
-                      су, амбри та ванілі, щоб гіпнотизувати.
+                      Лукас любить створювати свої парфуми як з натуральної сировини, так і з синтетичних, починаючи від індонезійської есенції пачулі, яка привносить напрочуд чуттєвий відтінок какао та викликає звикання, до композицій, таких як JADE of SOMENS.
                     </p>
+                    <p>Парфумер: Lucas Sieuzac.</p>
                     <p>Верхні ноти: Фруктові ноти та Квіткові ноти​</p>
                     <p>Середні ноти: Бергамот та Гарденія​
                     </p>
@@ -97,8 +101,11 @@
                   <div class="discription">
                     <h4>SOMENS ARENA</h4>
                     <p>
-                      су, амбри та ванілі, щоб гіпнотизувати.
+                      Відкрите серце і розум разом із вишуканим нюхом. Мистецтво поєднувати культури через аромати.
+
+Арена - це парфуми, які представляють походження всіх парфумів і які еволюціонували в духи сьогодення.<br> Arena — це пережиток перших парфумів в арабському світі, які були створені з елегантними та вишуканими арабськими та класичними нотами.
                     </p>
+                    <p>Парфумер: Chris Maurice.</p>
                     <p>Верхні ноти: Кардамон, Роза та Артемізія​​</p>
                     <p>Середні ноти: Червоні фрукти, Шавлія, Нагармота, Ірис та Амбра​
                     </p>
@@ -123,8 +130,9 @@
                   <div class="discription">
                     <h4>SOMENS SEDA</h4>
                     <p>
-                      су, амбри та ванілі, щоб гіпнотизувати.
+                      Seda - це парфуми, які починаються з історії культур Індійського океану і закінчуються в головних містах Європи з дуже вишуканим свіжим відтінком.
                     </p>
+                    <p>Парфумер: Daniel Josier.</p>
                     <p>Верхні ноти: Цитруси, Гальбанум та Мандарин​​​</p>
                     <p>Середні ноти: Жасмин та Аґрус
                     </p>
@@ -149,8 +157,11 @@
                   <div class="discription">
                     <h4>SOMENS ONICE</h4>
                     <p>
-                      су, амбри та ванілі, щоб гіпнотизувати.
+                      Onice — це парфуми, які спускаються з крижаних гір, суть і аромати з цього дивовижного фону.
+Він вшановує життя вдома, а також регіони світу, де життя на відкритому повітрі, у деяких дуже віддалених районах, приносить найновіші враження, відомі людині.
+Від Патагонії до Арктики, Onice вловлює та повертає це відчуття всім тим, кому ще належить відчути справжнє відчуття найсвіжіших місць на землі.
                     </p>
+                    <p>Парфумер: Lucas Sieuzac.</p>
                     <p>Верхні ноти: Апельсин, М'ята та Чорний перець​​​​</p>
                     <p>Середні ноти: Кашемірове дерево та Елемі ​
                     </p>
@@ -175,8 +186,14 @@
                   <div class="discription">
                     <h4>SOMENS CAPRICCIO</h4>
                     <p>
-                      су, амбри та ванілі, щоб гіпнотизувати.
+                      Capriccio, як каже італійське слово, це миттєва насолода, коли твоє бажання збувається.
+Capriccio уособлює тропіки, тепло сонячних днів, свіжість фруктів і елегантний морський бриз.<br>
+
+Capriccio — це серце і душа, поєднання толерантності та радості в Маямі, коли спогади про тропіки вітаються аватаром нової землі.<br>
+                    
+                    Capriccio - ідеальне поєднання солодкості, елегантності, свіжості та привабливості.
                     </p>
+                    <p>Парфумер: Chris Maurice.</p>
                     <p>Верхні ноти: Ананас, Бергамот та Чорниця​​</p>
                     <p>Середні ноти: Жасмин
                     </p>
