--- a/brands/gravel.html
+++ b/brands/gravel.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../brands_css/gravel_style.css">
+    <link rel="stylesheet" href="../brands_css/shauran_responsive.css">
     <link rel="stylesheet" type="text/css" href="../vendor/bootstrap-4.6.2-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/owlcarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="../vendor/owlcarousel/owl.theme.default.min.css">
