--- a/brands/royal_crown.html
+++ b/brands/royal_crown.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../brands_css/royal_crown_style.css" />
+    <link rel="stylesheet" href="../brands_css/shauran_responsive.css">
+
     <link
       rel="stylesheet"
       type="text/css"
