--- a/brands/gravel.html
+++ b/brands/gravel.html
@@ -1,142 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../brands_css/gravel_style.css">
-    <link rel="stylesheet" href="../brands_css/shauran_responsive.css">
-    <link rel="stylesheet" type="text/css" href="../vendor/bootstrap-4.6.2-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../vendor/owlcarousel/owl.carousel.min.css">
-    <link rel="stylesheet" href="../vendor/owlcarousel/owl.theme.default.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../brands_css/gravel_style.css" />
+    <link rel="stylesheet" href="../brands_css/shauran_responsive.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../vendor/bootstrap-4.6.2-dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="../vendor/owlcarousel/owl.carousel.min.css" />
+    <link
+      rel="stylesheet"
+      href="../vendor/owlcarousel/owl.theme.default.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <script type="text/javascript" src="../js/jquery-v3.6.1.mini.js"></script>
     <script type="text/javascript" src="../js/custom.js"></script>
-    <script type="text/javascript" src="../vendor/bootstrap-4.6.2-dist/js/bootstrap.min.js"></script>
+    <script
+      type="text/javascript"
+      src="../vendor/bootstrap-4.6.2-dist/js/bootstrap.min.js"
+    ></script>
     <script src="../vendor/owlcarousel/owl.carousel.min.js"></script>
     <title>GRAVEL</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="for_page">
-        <header class="header">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                        <h2>GRAVEL</h2>
-                    </div>
-                </div>
+      <header class="header">
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+              <h2>GRAVEL</h2>
             </div>
-        </header>
-        <!-- <div class="owl-carousel">
+          </div>
+        </div>
+      </header>
+      <!-- <div class="owl-carousel">
             <img src="../img/gravel/carousel/Detail_2.png" alt="">
             <img src="../img/gravel/carousel/Gesamt_1.png" alt="">
             <img src="../img/gravel/carousel/Gesamtl_3.png" alt="">
         </div> -->
-        <main class="main">
-            <section class="block_one">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                        <img src="../img/gravel/A-Mans-Cologne.jpg">
-                    </div>
-                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                        <div class="discription">
-                            <h4>GRAVEL A-Mans-Cologne</h4>
-                            <p>A Man's Cologne Gravel - це парфум для чоловіків, 
-                                він належить до групи фужерні. A Man's Cologne випущено 1957 року.</p>
-                                <p>Парфумер: Michael Knudson. </p>
-                                <p>Верхня нота: Цитруси </p>
-                                <p>Середні ноти: Деревні ноти та Сандал </p>
-                                <p>Базові ноти: Олібанум, Cмоли та Ялицевий бальзам</p>
-                        </div>
-                    </div>
-                    </div>
+      <main class="main">
+        <section class="block_one">
+          <div class="container">
+            <div class="row">
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <img src="../img/gravel/A-Mans-Cologne.jpg" />
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="discription">
+                  <h4>GRAVEL A-Mans-Cologne</h4>
+                  <p>
+                    A Man's Cologne Gravel - це парфум для чоловіків, він
+                    належить до групи фужерні. A Man's Cologne випущено 1957
+                    року.
+                  </p>
+                  <p>Парфумер: Michael Knudson.</p>
+                  <p>Верхня нота: Цитруси</p>
+                  <p>Середні ноти: Деревні ноти та Сандал</p>
+                  <p>Базові ноти: Олібанум, Cмоли та Ялицевий Бальзам</p>
                 </div>
-            </section>
+              </div>
+            </div>
+          </div>
+        </section>
 
-            <section class="block_two">
-                <div class="container">
-                    <div class="row">
-                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                    <img src="../img/gravel/American-Dream.jpg" alt="">
+        <section class="block_two">
+          <div class="container">
+            <div class="row">
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <img src="../img/gravel/American-Dream.jpg" alt="" />
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="discription">
+                  <h4>GRAVEL American Dream</h4>
+                  <p>
+                    American Dream Gravel - це парфум для жінок та чоловіків,
+                    він належить до групи східні дерев'яні. Across the Ocean
+                    випущено у 2019 році.
+                  </p>
+                  <p>Парфумер: Michael Knudson.</p>
+                  <p>Верхня нота: Лимон, Бергамот, Базилік та Апельсин</p>
+                  <p>Середні ноти: Петітгрейн, Лаванда, Жасмін та Боби Тонка</p>
+                  <p>Базові ноти: Мох, Ветивер та Пачулі.</p>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                    <div class="discription">
-                        <h4>GRAVEL American Dream</h4>
-                        <p>
-                            American Dream Gravel - це парфум для жінок та чоловіків, він належить до групи східні дерев'яні. Across the Ocean випущено у 2019 році.</p>
-                            <p>Парфумер: Michael Knudson. </p>
-                            <p>Верхня нота: Лимон, Бергамот, Базилік та Апельсин</p>
-                            <p>Середні ноти: Петітгрейн, Лаванда, Жасмін та Боби тонка </p>
-                            <p>Базові ноти: Мох, Ветивер та Пачулі.</p>
-                    </div>
-                </div>
-                </div>
-                </div>
-            </section>
+              </div>
+            </div>
+          </div>
+        </section>
 
-            <section class="block_three">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                            <img src="../img/gravel/45th-Street.jpg" alt="">
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                            <div class="discription">
-                                <h4>GRAVEL 46th Street</h4>
-                                <p> 46th Street Gravel - це парфум для жінок та чоловіків, він належить до групи східні дерев'яні. Це нове видання: 46th Street випущений у 2020 році.</p>
-                                    <p>Парфумер: Michael Knudson. </p>
-                                    <p>Верхня нота: Лісові ягоди та Береза</p>
-                                    <p>Середні ноти: Жасмин, Нагармота та Деревні ноти </p>
-                                    <p>Ладан, Мускус, Уд та Сіра амбра.</p>
-                            </div>
-                        </div>
-                    </div>
+        <section class="block_three">
+          <div class="container">
+            <div class="row">
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <img src="../img/gravel/45th-Street.jpg" alt="" />
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="discription">
+                  <h4>GRAVEL 46th Street</h4>
+                  <p>
+                    46th Street Gravel - це парфум для жінок та чоловіків, він
+                    належить до групи східні дерев'яні. Це нове видання: 46th
+                    Street випущений у 2020 році.
+                  </p>
+                  <p>Парфумер: Michael Knudson.</p>
+                  <p>Верхня нота: Лісові ягоди та Береза</p>
+                  <p>Середні ноти: Жасмін, Нагармота та Деревні Ноти</p>
+                  <p>Ладан, Мускус, Уд та Сіра Амбра.</p>
                 </div>
-            </section>
+              </div>
+            </div>
+          </div>
+        </section>
 
-            <section class="block_four">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                            <img src="../img/gravel/Across-the-ocean.jpg" alt="">
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                            <div class="discription">
-                                <h4>GRAVEL Across the Ocean</h4>
-                                <p> 4Across the Ocean Gravel - це парфум для жінок та чоловіків, він належить до групи східні дерев'яні. Across the Ocean випущено у 2019 році.</p>
-                                    <p>Парфумер: Michael Knudson. </p>
-                                    <p>Верхня нота: Кашемірове дерево, Уд, Лимон та Бергамот</p>
-                                    <p>Середні ноти: Боби тонка та Троянда </p>
-                                    <p>Мускус, Ваніль та Гваяк.</p>
-                            </div>
-                        </div>
-                    </div>
+        <section class="block_four">
+          <div class="container">
+            <div class="row">
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <img src="../img/gravel/Across-the-ocean.jpg" alt="" />
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="discription">
+                  <h4>GRAVEL Across the Ocean</h4>
+                  <p>
+                    4Across the Ocean Gravel - це парфум для жінок та чоловіків,
+                    він належить до групи східні дерев'яні. Across the Ocean
+                    випущено у 2019 році.
+                  </p>
+                  <p>Парфумер: Michael Knudson.</p>
+                  <p>Верхня нота: Кашемірове Дерево, Уд, Лимон та Бергамот</p>
+                  <p>Середні ноти: Боби Тонка та Троянда</p>
+                  <p>Мускус, Ваніль та Гваяк.</p>
                 </div>
-            </section>
+              </div>
+            </div>
+          </div>
+        </section>
 
-            <section class="block_five">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                            <img src="../img/gravel/Hudson-River-NY.jpg" alt="">
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                            <div class="discription">
-                                <h4>GRAVEL Hudson-River-NY</h4>
-                                <p> Hudson-River-NY Gravel - це аромат для чоловіків і жінок, він належить до групи фужерні. Це нове видання: Hudson River NY випущений у 2020 році. </p>
-                                    <p>Парфумер: Michael Knudson. </p>
-                                    <p>Верхня нота: Бергамот та Герань</p>
-                                    <p>Середні ноти: Кардамон, Лаванда та Коріандр </p>
-                                    <p>Боби тонка, Ваніль, Кедр та Деревні ноти.</p>
-                            </div>
-                        </div>
-                    </div>
+        <section class="block_five">
+          <div class="container">
+            <div class="row">
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <img src="../img/gravel/Hudson-River-NY.jpg" alt="" />
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="discription">
+                  <h4>GRAVEL Hudson-River-NY</h4>
+                  <p>
+                    Hudson-River-NY Gravel - це аромат для чоловіків і жінок,
+                    він належить до групи фужерні. Це нове видання: Hudson River
+                    NY випущений у 2020 році.
+                  </p>
+                  <p>Парфумер: Michael Knudson.</p>
+                  <p>Верхня нота: Бергамот та Герань</p>
+                  <p>Середні ноти: Кардамон, Лаванда та Коріандр</p>
+                  <p>Боби тонка, Ваніль, Кедр та Деревні Ноти.</p>
                 </div>
-            </section>
-        </main>
-    </div> 
-</body>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
