--- a/brands/shauran.html
+++ b/brands/shauran.html
@@ -50,7 +50,7 @@
                     Сяючі троянди та апельсиновий цвіт поєднуються з насиченими теплими нотами уду, мірри, цистусу, амбри та ванілі, щоб гіпнотизувати.
                   </p>
                   <p>Верхні ноти: Роза, Неролі та Лабданум</p>
-                  <p>Середні ноти: Квітка апельсина, Мірра та Уд
+                  <p>Середні ноти: Квітка Апельсина, Мірра та Уд
                   </p>
                   <p>
                 Базові ноти: Кедр, Амбра та Ваніль
@@ -73,12 +73,12 @@
                   <div class="discription">
                     <h4>SHAURAN CAPELLA</h4>
                     <p>
-                      Привабливе сяйво найяскравішої зірки на нічному небі...
-  Свіжі нотки бергамоту, м'яти, шавлії та ялиці в поєднанні з жасмином, пачулі, сандаловим деревом та амброю зачаровують.
+                    Привабливе сяйво найяскравішої зірки на нічному небі...
+                    Свіжі нотки бергамоту, м'яти, шавлії та ялиці в поєднанні з жасміном, пачулі, сандаловим деревом та амброю зачаровують.
                     </p>
                     <p>
-                    Верхні ноти: Бергамот, Морські ноти, Елемі та М'ята</p>
-                    <p>Середні ноти: Лаванда, Шавлія, Жасмін і Ялицевий бальзам
+                    Верхні ноти: Бергамот, Морські Ноти, Елемі та М'ята</p>
+                    <p>Середні ноти: Лаванда, Шавлія, Жасмін і Ялицевий Бальзам
                     </p>
                     <p>
                   Базові ноти: Сіра Амбра, Пачулі, Сандал, Шкіра та Мускус
@@ -105,11 +105,11 @@
                         Домінує велич шкіряного акорду в оточенні рожевого перцю, шафрану, геліотропа, кедра та тикового дерева.
                     </p>
                     <p>
-                    Верхні ноти: Бергамот, Лимон та Рожевий перець</p>
+                    Верхні ноти: Бергамот, Лимон та Рожевий Перець</p>
                     <p>Середні ноти: Шкіра, Шафран, Геліотроп та Жасмін
                     </p>
                     <p>
-                  Базові ноти: Кедр, Тикове дерево, Мох та Мускус
+                  Базові ноти: Кедр, Тикове Дерево, Мох та Мускус
                     </p>
                   </div>
                 </div>
@@ -130,14 +130,14 @@
                     <h4>SHAURAN DYNASTY</h4>
                     <p>
                         Благородство, сила і чуттєвість, що виходять за ворота розкішного палацу…
-Втілює ноти чорної смородини та кориці з тонким букетом ілангу, жасмину, троянди та геліотропа на деревно-мускусній основі з сірою амброю.
+Втілює ноти чорної смородини та кориці з тонким букетом ілангу, жасміну, троянди та геліотропа на деревно-мускусній основі з сірою амброю.
                     </p>
                     <p>
-                    Верхні ноти: Мандарин, Лимон, Лист чорної смородини та Морські ноти</p>
+                    Верхні ноти: Мандарин, Лимон, Лист Чорної Смородини та Морські Ноти</p>
                     <p>Середні ноти: Іланг-іланг, Жасмін, Роза, Кориця та Геліотроп
                     </p>
                     <p>
-                  Базові ноти: Деревні ноти, Сандал, Сіра Амбра та Мускус
+                  Базові ноти: Деревні Ноти, Сандал, Сіра Амбра та Мускус
                     </p>
                   </div>
                 </div>
@@ -162,7 +162,7 @@
 Композиція пачулі та ветівера зі східними відтінками амбри, смоли та ванілі з пудровими відтінками ірису та фіалки.
                     </p>
                     <p>
-                    Верхні ноти: Пачулі, Корінь іриса та Фіалка</p>
+                    Верхні ноти: Пачулі, Корінь Іриса та Фіалка</p>
                     <p>Середні ноти: Пачулі, Cмоли та Ветивер
                     </p>
                     <p>
@@ -193,7 +193,7 @@
                     <p>Середні ноти: Сандал, Малина, Шафран, Шкіра та Лабданум
                     </p>
                     <p>
-                  Базові ноти: Тикове дерево, Пачулі, Ваніль, Боби тонка і Мускус
+                  Базові ноти: Тикове дерево, Пачулі, Ваніль, Боби Тонка і Мускус
                     </p>
                   </div>
                 </div>
@@ -213,7 +213,7 @@
                     <h4>SHAURAN MESOPOTAMIA</h4>
                     <p>Захоплююче царство Месопотамії з його непереборним духом випромінює природну та спокійну красу...
                         Розкішна симфонія морських нот, моху, бергамоту, муге та троянди підноситься глибокими відтінками амбри та мускусу. <p>
-                    Верхні ноти: Морські ноти та Бергамот</p>
+                    Верхні ноти: Морські Ноти та Бергамот</p>
                     <p>Середні ноти: Шафран, Конвалія та Троянда
                     </p>
                     <p>
@@ -262,8 +262,8 @@
                     <h4>SHAURAN RENAISSANCE</h4>
                     <p>Чудове відродження захоплюючої сучасності…
                     Унікальна гармонія білого перцю, ялівцю та кардамону з дорогоцінним поєднанням уду, шкіри, троянди та ірису, доповнених тютюном, кедром та пачулі.<p>
-                    Верхні ноти: Білий перець, Рожевий перець, Ялівець та Кардамон</p>
-                    <p>Середні ноти: Уд, Шкіра, Корінь ірису та Троянда
+                    Верхні ноти: Білий Перець, Рожевий Перець, Ялівець та Кардамон</p>
+                    <p>Середні ноти: Уд, Шкіра, Корінь Ірису та Троянда
                     </p>
                     <p>
                   Базові ноти: Аміріс, Пачулі, Ваніль, Тютюн та Кедр
@@ -287,8 +287,8 @@
                     <h4>SHAURAN REVERIE</h4>
                     <p>Чудове відродження захоплюючої сучасності…
                     Унікальна гармонія білого перцю, ялівцю та кардамону з дорогоцінним поєднанням уду, шкіри, троянди та ірису, доповнених тютюном, кедром та пачулі.<p>
-                    Верхні ноти: Білий перець, Рожевий перець, Ялівець та Кардамон</p>
-                    <p>Середні ноти: Уд, Шкіра, Корінь ірису та Троянда
+                    Верхні ноти: Білий Перець, Рожевий Перець, Ялівець та Кардамон</p>
+                    <p>Середні ноти: Уд, Шкіра, Корінь Ірису та Троянда
                     </p>
                     <p>
                   Базові ноти: Аміріс, Пачулі, Ваніль, Тютюн та Кедр
