--- a/brands/somens.html
+++ b/brands/somens.html
@@ -46,8 +46,7 @@
                 <div class="discription">
                   <h4>SOMENS ARIA</h4>
                   <p>
-                    Арія - це суть Середземного моря. Він представляє та пов’язує міграцію тих, хто з часом пішов на відважну пригоду до Америки. Він починається з найкращого лимона, бергамоту та граната з дерев, які вирощуються з покоління в покоління на сонячних землях Піренейського півострова навіть сьогодні.
-ноти серця: Білий Чай і Жасмин з Провансу та Інжир з Каталонії, де народився знаменитий художник Далі; Базові ноти — одні з найдавніших інгредієнтів Ліванських гір, ветивер і кедр, збалансовані нотами мускусу.
+                    Відкрите серце та розум у поєднанні з вишуканим запахом — це мистецтво зв’язувати культури за допомогою ароматів.
                   </p>
                   <p>Парфумер: Chris Maurice.</p>
                   <p>Верхні ноти: Лимон, Бергамот та Гранат</p>
@@ -74,7 +73,7 @@
                   <div class="discription">
                     <h4>SOMENS JADE</h4>
                     <p>
-                      Лукас любить створювати свої парфуми як з натуральної сировини, так і з синтетичних, починаючи від індонезійської есенції пачулі, яка привносить напрочуд чуттєвий відтінок какао та викликає звикання, до композицій, таких як JADE of SOMENS.
+                      Лукас любить створювати свої парфуми як з натуральної сировини, так і з синтетичної. Починаючи від індонезійської есенції пачулі, яка привносить чуттєвий відтінок какао та викликає звикання, до композицій таких як ця.
                     </p>
                     <p>Парфумер: Lucas Sieuzac.</p>
                     <p>Верхні ноти: Фруктові ноти та Квіткові ноти​</p>
@@ -101,9 +100,7 @@
                   <div class="discription">
                     <h4>SOMENS ARENA</h4>
                     <p>
-                      Відкрите серце і розум разом із вишуканим нюхом. Мистецтво поєднувати культури через аромати.
-
-Арена - це парфуми, які представляють походження всіх парфумів і які еволюціонували в духи сьогодення.<br> Arena — це пережиток перших парфумів в арабському світі, які були створені з елегантними та вишуканими арабськими та класичними нотами.
+                      Arena - це парфуми, які представляють походження всіх парфумів, які еволюціонували в духи сьогодення.<br> Arena — це пережиток перших парфумів в арабському світі, які були створені з елегантними та вишуканими арабськими та класичними нотами.
                     </p>
                     <p>Парфумер: Chris Maurice.</p>
                     <p>Верхні ноти: Кардамон, Роза та Артемізія​​</p>
@@ -157,8 +154,8 @@
                   <div class="discription">
                     <h4>SOMENS ONICE</h4>
                     <p>
-                      Onice — це парфуми, які спускаються з крижаних гір, суть і аромати з цього дивовижного фону.
-Він вшановує життя вдома, а також регіони світу, де життя на відкритому повітрі, у деяких дуже віддалених районах, приносить найновіші враження, відомі людині.
+                      Onice — це парфуми, які спускаються з крижаних гір, це аромат з цього дивовижного фону.
+Він відображає життя вдома, а також регіони життя на відкритому повітрі у дуже віддалених районах. Він приносить найновіші враження відомі людині.
 Від Патагонії до Арктики, Onice вловлює та повертає це відчуття всім тим, кому ще належить відчути справжнє відчуття найсвіжіших місць на землі.
                     </p>
                     <p>Парфумер: Lucas Sieuzac.</p>
