--- a/brands/royal_crown.html
+++ b/brands/royal_crown.html
@@ -52,7 +52,7 @@
                   <h4>ROYAL CROWN AMBROSIA</h4>
                   <p>
                     Цирцея в Одіссеї розповідає Одіссею, що буря ластівок
-                    принесла Амброзію на гору Олімп, щоб потішити богів, які там
+                    принесла Амброзію на гору Олімп, щоб потішити Богів, які там
                     проживали. Подібно до нектару богів, цей аромат випромінює
                     медові та квіткові аромати. Гурманський початок медової
                     роси, ірис фіорентіно та османтус, народжені в регіоні
@@ -89,10 +89,10 @@
                   <h4>ROYAL CROWN CELEBRATION</h4>
                   <p>
                     Есенція, яка відзначає 150 -ту річницю об'єднання Італії,
-                    втілює вільний дух італійського Рісорджіменто.Польові квіти,
+                    втілює вільний дух італійського Рісорджіменто. Польові квіти,
                     ліси, ароматні чагарники, чисте повітря, аргентинська
                     свіжість гірських потоків і солоний аромат берегів витають.
-                    Тонка суміш середземноморських інгредієнтів<div class=""></div>
+                    Тонка суміш середземноморських інгредієнтів.
                   </p>
                   <p>
                     Верхня нота: Мандарин, Бергамот, М'ята, Лимон, Розмарин,
