--- a/brands/somens.html
+++ b/brands/somens.html
@@ -100,7 +100,7 @@
                   <div class="discription">
                     <h4>SOMENS ARENA</h4>
                     <p>
-                      Arena - це парфуми, які представляють походження всіх парфумів, які еволюціонували в духи сьогодення.<br> Arena — це пережиток перших парфумів в арабському світі, які були створені з елегантними та вишуканими арабськими та класичними нотами.
+                      Arena - це парфуми, які представляють походження всіх парфумів, які еволюціонували в духи сьогодення.<br> Arena - це пережиток перших парфумів в арабському світі, які були створені з елегантними та вишуканими арабськими та класичними нотами.
                     </p>
                     <p>Парфумер: Chris Maurice.</p>
                     <p>Верхні ноти: Кардамон, Роза та Артемізія​​</p>
